--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="service-box">
 
                 <h4>Dança de Salão</h4>
-                <p>O curso Felipe Garbin de dança de salão oferecem uma experiência completa, desde os passos básicos até as técnicas avançadas. Seja para se divertir, socializar ou competir, nossos instrutores qualificados garantem um aprendizado dinâmico e envolvente. Venha descobrir a magia dos ritmos latinos, do samba e do bolero.</p>
+                <p>O curso Felipe Garbin de dança de salão oferecem uma experiência completa, desde os passos básicos até as técnicas avançadas. Seja para se divertir, socializar ou competir, nossos instrutores garantem um aprendizado dinâmico e envolvente. Venha descobrir a magia dos ritmos latinos, do samba e do bolero.</p>
                 
             </div>
 
