--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="service-box">
 
                 <h4>Ballet</h4>
-                <p>O ballet é a base de todas as formas de dança e oferece uma estrutura rigorosa que fortalece o corpo e a mente. Nossas aulas de balé são projetadas para todas as idades e níveis, focando na técnica, postura e disciplina. Desde os primeiros pliés até os movimentos mais complexos, cada aluno encontrará um espaço para crescer.</p>
+                <p>O ballet é a base de todas as formas de dança e oferece uma estrutura rigorosa que fortalece o corpo e a mente. Nossas aulas de ballet são projetadas para todas as idades e níveis, focando na técnica e disciplina. Dos mais básicos aos mais complexos movimentos, cada aluno encontrará um espaço para crescer.</p>
                 
             </div>
             
