--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
             </div>
     
             <div class="info-group">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Digite uma mensagem"> 
-                </textarea>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Digite uma mensagem"></textarea>
                 <input type="submit" value="Enviar mensagem">
             </div>
         </form>
