--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div class="contact section" id="contato">
 
-        <h2 class="title">Contate-<span>me</span></h2>
+        <h2 class="title">Fale <span>conosco</span></h2>
 
         <form action="">
             <div class="info-group">
