--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="exp-year">2022</div>
                 <div class="exp-content">
                     <h4>Carol Dalmolin Estúdio de Dança</h4>
-                    <p>Em 2022, trabalhei com Carol Dalmolin, cujo estúdio é conhecido por suas aulas de jazz dinâmicas e inovadoras. Carol me ensinou a incorporar elementos de dança moderna e balé, desenvolvendo flexibilidade e força. Essa experiência expandiu minha abordagem coreográfica e pedagógica.</p>
+                    <p>Em 2022, trabalhei com Carol Dalmolin, cujo estúdio é conhecido por suas aulas de jazz dinâmicas e inovadoras. Carol me ensinou a incorporar elementos de dança moderna e ballet, desenvolvendo flexibilidade e força. Essa experiência expandiu minha abordagem coreográfica e pedagógica.</p>
                 </div>
             </div>
             
