--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <h2 class="title">Fale <span>comigo</span></h2>
 
-        <form action="enviar.php" method="post">
+        <form action="" method="post">
             <div class="info-group">
                 <input type="text" name="nome" placeholder="Nome" required>
                 <input type="email" name="email" placeholder="Email" required>
