--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="testimonial-area">
 
                 <div class="testimonial-item">
-                    <img src="Image-1.jpg" alt="">
+                    <img src="report-1.jpg" alt="">
                     <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="Image-1.jpg" alt="">
+                    <img src="report-2.jpg" alt="">
                     <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
@@ -175,7 +175,7 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="Image-1.jpg" alt="">
+                    <img src="report-3.jpg" alt="">
                     <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
