--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div class="testimonial-item">
                     <img src="report-1.jpg" alt="">
-                    <h4>Felipe</h4>
+                    <h4>Amanda</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
@@ -162,7 +162,7 @@
 
                 <div class="testimonial-item">
                     <img src="report-2.jpg" alt="">
-                    <h4>Felipe</h4>
+                    <h4>Rodrigo</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
@@ -176,7 +176,7 @@
 
                 <div class="testimonial-item">
                     <img src="report-3.jpg" alt="">
-                    <h4>Felipe</h4>
+                    <h4>Inacio</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
