--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <div class="testimonial-area">
 
                 <div class="testimonial-item">
-                    <img src="report-3.jpg" alt="">
-                    <h4>Amanda</h4>
+                    <img src="Image-1.jpg" alt="">
+                    <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
@@ -161,8 +161,8 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="report-1.jpg" alt="">
-                    <h4>Rodrigo</h4>
+                    <img src="Image-1.jpg" alt="">
+                    <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
@@ -175,8 +175,8 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img src="report-2.jpg" alt="">
-                    <h4>Inacio</h4>
+                    <img src="Image-1.jpg" alt="">
+                    <h4>Felipe</h4>
                     <div class="rating">
                         <i class='bx bxs-star'></i>
                         <i class='bx bxs-star'></i>
